🐛 bug: fix guide not showing up on Chrome

--- a/src/pages/Guide/Guide.scss
+++ b/src/pages/Guide/Guide.scss
@@ -6,6 +6,7 @@ main#clerkent-guide {
   margin: 0 auto;
   padding: 2rem 1rem;
   font-family: $font;
+  font-size: 120%;
 
   #clerkent-logo {
     display: inline-block;
